@@ -42,6 +42,8 @@ Here is the list of the "class" attribute values used and their meanings:
 
 "poem_author" - FB2 poem author element
 
+"poem_subtitle" - subtitle in FB2 poem
+
 "section"?  - where "?" is a number starting from 1 - FB2 file section, the number shows the level of inclusioon: 1 - top level section, 
                  2 - section included in section level 1 etc.
                  
